# Warehouse_robot_ai

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
data/raw/: warehouse_grids.csv
experiments/: run_experiment.py  run_variants.py
src/: problem.py  search.py  state.py  utils.py
tests/: test_state.py
